--- a/views/me.html.erb
+++ b/views/me.html.erb
@@ -1,1 +1,12 @@
 foo
+poo
+<h1>watch out!</h1>
+<p> dance dance </p>
+
+ <% animals = ['dog', 'cat', 'human']%>
+
+    <ul>
+      <% animals.each do |animal| %>
+        <li>I like kissing <%= animal %></li>
+      <% end %>
+    </ul>
